test/indexOutOfBounds21_4.slq

def main(){
	x:=():unit;
	i:=0:𝔹;
	return (x[i],i); /// error
}
